--- a/docs/release_notes.adoc
+++ b/docs/release_notes.adoc
@@ -1,6 +1,8 @@
 = Release Notes
 include::include.adoc[]
 
+== 2.0-M5 (tbd)
+
 == 2.0-M4 (2020-11-01)
 
 - *Added <<parallel_execution.adoc#parallel-execution,Parallel Execution>> support*
