--- a/docs/extensions.adoc
+++ b/docs/extensions.adoc
@@ -845,6 +845,7 @@ each at addition time whether it is attached to the method interceptor or the ot
 ----
 class I extends AbstractMethodInterceptor { I(def s) {} }
 
+// On SpecInfo
 specInfo.addSharedInitializerInterceptor new I('shared initializer')
 specInfo.sharedInitializerMethod?.addInterceptor new I('shared initializer method')
 specInfo.addInterceptor new I('specification')
@@ -862,13 +863,19 @@ specInfo.cleanupMethods*.addInterceptor new I('cleanup method')
 specInfo.addCleanupSpecInterceptor new I('cleanup spec')
 specInfo.cleanupSpecMethods*.addInterceptor new I('cleanup spec method')
 specInfo.allFixtureMethods*.addInterceptor new I('fixture method')
+
+// on FeatureInfo
+featureInfo.addInterceptor new I('feature')
+featureInfo.addIterationInterceptor new I('iteration')
+featureInfo.featureMethod.addInterceptor new I('feature method')
+
 ----
 
 ==== Injecting Method Parameters
 
 If your interceptor should support custom method parameters for wrapped methods, this can be done by modifying
 `invocation.arguments`. Two use cases for this would be a mocking framework that can inject method parameters that are
-annotated with a special annotation or some test helper that injects objects of a specific type that are created and
+annotated with a special annotation, or some test helper that injects objects of a specific type that are created and
 prepared for usage automatically.
 
 When called from at least Spock 2.0, the `arguments` array will always have the size of the method parameter count,
