--- a/docs/extensions.adoc
+++ b/docs/extensions.adoc
@@ -682,7 +682,7 @@ driven local extensions. For both extension types you implement a specific inter
 methods. In your implementation of those methods you can set up the magic of your extension, for example by adding
 interceptors to various interception points that are described below.
 
-Which type of annotation you create depends on your use case. If you want to do something once during the Spock run - at
+It depends on your use case which type of annotation you create. If you want to do something once during the Spock run - at
 the start or end - or want to apply something to all executed specifications without the user of the extension having to
 do anything besides including your extension in the classpath, then you should opt for a global extension. If you
 instead want to apply your magic only by choice of the user, then you should implement an annotation driven local
@@ -693,8 +693,7 @@ extension.
 To create a global extension you need to create a class that implements the interface `IGlobalExtension` and put its
 fully-qualified class name in a file `META-INF/services/org.spockframework.runtime.extension.IGlobalExtension` in the
 class path. As soon as these two conditions are satisfied, the extension is automatically loaded and used when Spock is
-running. For convenience there is also the class `AbstractGlobalExtension`, which provides empty implementations for all
-methods in the interface, so that only the needed ones need to be overridden.
+running.
 
 `IGlobalExtension` has the following three methods:
 
@@ -706,7 +705,9 @@ methods in the interface, so that only the needed ones need to be overridden.
   like attaching interceptors to various interception points as described in the chapter <<Interceptors>>.
 
 `stop()`::
-  This is called once at the very end of the Spock execution.
+  This is called at least once at the very end of the Spock execution.
+
+NOTE: Build tools might trigger repeated executions, so those methods might be called more often than you might expect.
 
 === Annotation Driven Local Extensions
 
@@ -737,7 +738,7 @@ extension magic, like attaching interceptors to various interception points as d
 
 `visitSpecAnnotations(List<T> annotations, SpecInfo spec)`::
   This is called once for each specification where the annotation is applied one or multiple times
-  with the annotation instances as first parameter and the specification info object as second parameter.
+  with the annotation instances as first parameter, and the specification info object as second parameter.
   The default implementation calls `visitSpecAnnotation` once for each given annotation.
 
 `visitSpecAnnotation(T annotation, SpecInfo spec)`::
@@ -746,7 +747,7 @@ extension magic, like attaching interceptors to various interception points as d
 
 `visitFieldAnnotations(List<T> annotations, FieldInfo field)`::
   This is called once for each field where the annotation is applied one or multiple times
-  with the annotation instances as first parameter and the field info object as second parameter.
+  with the annotation instances as first parameter, and the field info object as second parameter.
   The default implementation calls `visitFieldAnnotation` once for each given annotation.
 
 `visitFieldAnnotation(T annotation, FieldInfo field)`::
@@ -755,7 +756,7 @@ extension magic, like attaching interceptors to various interception points as d
 
 `visitFixtureAnnotations(List<T> annotations, MethodInfo fixtureMethod)`::
   This is called once for each fixture method where the annotation is applied one or multiple times
-  with the annotation instances as first parameter and the fixture method info object as second parameter.
+  with the annotation instances as first parameter, and the fixture method info object as second parameter.
   The default implementation calls `visitFixtureAnnotation` once for each given annotation.
 
 `visitFixtureAnnotation(T annotation, MethodInfo fixtureMethod)`::
@@ -764,7 +765,7 @@ extension magic, like attaching interceptors to various interception points as d
 
 `visitFeatureAnnotations(List<T> annotations, FeatureInfo feature)`::
   This is called once for each feature method where the annotation is applied one or multiple times
-  with the annotation instances as first parameter and the feature info object as second parameter.
+  with the annotation instances as first parameter, and the feature info object as second parameter.
   The default implementation calls `visitFeatureAnnotation` once for each given annotation.
 
 `visitFeatureAnnotation(T annotation, FeatureInfo feature)`::
@@ -788,10 +789,18 @@ NOTE: It is an error to have multiple configuration objects with the same name, 
 probably prefix it with some package-like name to minimize the risk for name clashes with other extensions or the core
 Spock code.
 
-To use the values of the configuration object in your extension, just define an uninitialized instance field of that
-type. Spock will then automatically create exactly one instance of the configuration object per Spock run, apply the
+To use the values of the configuration object in your extension, you can either use constructor injection or field injection.
+
+* To use constructor injection just define a constructor with one or more configuration object parameters.
+* To use field injection just define an uninitialized non-final instance field of that type.
+
+Spock will then automatically create exactly one instance of the configuration object per Spock run, apply the
 settings from the configuration file to it (before the `start()` methods of global extensions are called) and inject
 that instance into the extension class instances.
+
+NOTE: Constructor injection has a higher priority than field injection and Spock won't inject any fields if it finds a suitable constructor.
+      If you want to support both Spock 1.x and 2.x you can either use only field injection (Spock 1.x only supports field injection),
+      or you can have both a default constructor and an injectable constructor, this way Spock 2.x will use constructor injection and Spock 1.x will use field injection.
 
 If a configuration object should be used exclusively in an annotation driven local extension you must register it in
 `META-INF/services/spock.config.ConfigurationObject`.
@@ -799,14 +808,14 @@ This is similar to a global extension, put the fully-qualified class name of the
 This will cause the configuration object to properly get initialized and populated with the settings from the configuration file.
 However, if the configuration object is used in a global extension, you can also use it just fine in an annotation driven local
 extension. If the configuration object is only used in an annotation driven local extension, you will get an exception
-when then configuration object is to be injected into the extension and you will also get an error when the
-configuration file is evaluated and it contains the section, as the configuration object is not properly registered yet.
+when then configuration object is to be injected into the extension, and you will also get an error when the
+configuration file is evaluated, and it contains the section, as the configuration object is not properly registered yet.
 
 === Interceptors
 
 For applying the magic of your extension, there are various interception points, where you can attach interceptors from
 the extension methods described above to hook into the Spock lifecycle. For each interception point there can of course
-be multiple interceptors added by arbitrary Spock extensions (shipped or 3rd party). Their order is currently depending
+be multiple interceptors added by arbitrary Spock extensions (shipped or 3rd party). Their order currently depends
 on the order they are added, but there should not be made any order assumptions within one interception point.
 
 .Spock Interceptors
@@ -930,7 +939,7 @@ restrictions, if parameters should be injected by your extension:
 * all method parameters have to be assigned a value in the `where:` block, for example `null`
 * the order of the method parameters has to be identical to the order of the data variables in the `where:` block
 
-of course you can also make your extension only inject a value if none is set already, as the `where:` block
+Of course, you can also make your extension only inject a value if none is set already, as the `where:` block
 assignments happen before the method interceptor is called
 
 for this simply check whether `invocation.arguments[i]` is `null` or not
