--- a/docs/data_driven_testing.adoc
+++ b/docs/data_driven_testing.adoc
@@ -373,7 +373,7 @@ include::{sourcedir}/datadriven/DataSpec.groovy[tag=combined-variable-assignment
 
 == Type Coercion for Data Variable Values
 
-Data variable values are casted to the declared parameter type using
+Data variable values are coerced to the declared parameter type using
 https://groovy-lang.org/operators.html#_coercion_operator[type coercion]. Due to that custom type conversions can be
 provided as https://groovy-lang.org/metaprogramming.html#_extension_modules[extension module] or with the help of
 the <<extensions.adoc#_use,`@Use`>> extension on the specification (as it has no effect to the `where:` block if
